--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=usuarios
+
+#configuracion de la base de datos postgres
+spring.datasource.url=jdbc:postgresql://localhost/usuarios
+spring.datasource.username=postgres
+spring.datasource.password=bhgelse123
+
+#para ver las consultas que se hace a la base de datos
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
