--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.datasource.password=bhgelse123
 #para ver las consultas que se hace a la base de datos
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+#deshabilitar el trace
+server.error.include-stacktrace=never
