generando token JWT y enviandolo al body

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,5 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 #deshabilitar el trace
 server.error.include-stacktrace=never
+#agregarmos el secrte
+api.security.token.secret=${JWT_SECRET:12345678}
