--- a/pom.xml
+++ b/pom.xml
@@ -92,11 +92,22 @@
             <artifactId>spring-security-test</artifactId>
             <scope>test</scope>
         </dependency>
-        <!--incluyendo la dependecia para generacion de token-->
+        <!-- incluyendo la dependecia para generacion de token -->
         <dependency>
             <groupId>com.auth0</groupId>
             <artifactId>java-jwt</artifactId>
             <version>4.5.0</version>
+        </dependency>
+        <!-- Dependencias JavaFX -->
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-controls</artifactId>
+            <version>17</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-fxml</artifactId>
+            <version>17</version>
         </dependency>
     </dependencies>
 
@@ -126,7 +137,15 @@
                     </excludes>
                 </configuration>
             </plugin>
+            <!-- Plugin para ejecutar JavaFX -->
+            <plugin>
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx-maven-plugin</artifactId>
+                <version>0.0.8</version>
+                <configuration>
+                    <mainClass>com.gelse.app.MainApp</mainClass>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
-
 </project>
